--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
+        <activity android:name=".CharacterCreation">
+        </activity>
+        <activity android:name=".CharacterView">
+        </activity>
     </application>
 
 </manifest>
