Added multiple features

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         </activity>
         <activity android:name=".CharacterView">
         </activity>
+        <activity android:name=".SpellCardGallery">
+        </activity>
     </application>
 
 </manifest>
