--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@android:style/Theme">
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".CharacterView"
+            android:theme="@style/Theme.AppCompat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,24 +19,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ViewSpellCard">
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+            android:name=".ViewSpellCard"
+            android:theme="@style/Theme.AppCompat">
         </activity>
         <activity
-            android:name=".ViewFilter">
-            android:parentActivityName=".MainActivity">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".MainActivity" />
+            android:name=".ViewFilter"
+            android:theme="@style/Theme.AppCompat">
         </activity>
-        <activity android:name=".CharacterCreation">
+        <activity android:name=".CharacterCreation"
+            android:theme="@style/Theme.AppCompat">
         </activity>
-        <activity android:name=".CharacterView">
+        <!--<activity-->
+            <!--android:name=".CharacterView">-->
+        <!--</activity>-->
+        <activity
+            android:name=".SpellCardGallery"
+            android:theme="@style/Theme.AppCompat">
         </activity>
-        <activity android:name=".SpellCardGallery">
+        <activity
+            android:name=".CharacterProfile"
+            android:theme="@style/Theme.AppCompat">
         </activity>
     </application>
 
